пофиксили ссылки на товар

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Верхняя часть -->
         <div class="card__top">
           <!-- Изображение-ссылка товара -->
-          <a href="/pages/Card/index.html" class="card__image">
+          <a href="/pages/card/index.html" class="card__image">
             <img
               src="/src/phones/1.jpg"
               alt="Apple IPhone ."
@@ -57,7 +57,7 @@
             <div class="card__price card__price--common">150 000</div>
           </div>
           <!-- Ссылка-название товара -->
-          <a href="/pages/Card/index.html" class="card__title">
+          <a href="/pages/card/index.html" class="card__title">
             IPhone1 
           </a>
           <!-- Кнопка добавить в корзину -->
