--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 <div class="buc">
-    <a href="/pages/basket/1.html"><img src="/src/photo/buc.png" alt=""></a>
+    <a href="/pages/basket/index.html"><img src="/src/photo/buc.png" alt=""></a>
   </div>
   </div>
   <div class="cards"></div>
