--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <div class="d-flex">
     <div class="slider">
         <div class="slider__line d-flex">
             <img src="/src/photo/1.jpg">
             <img src="/src/photo/2.jpg">
             <img src="/src/photo/3.jpg">
             <img src="/src/photo/4.jpg">
-            <img src="/src/photo/5.jpg">
-            
+            <img src="/src/photo/5.jpg">    
         </div>
         <div class="slider__controls d-flex">
             <i class="fa-solid fa-circle-arrow-left" onclick="sliderLeft()"></i>
@@ -29,10 +28,11 @@
             <!-- <div class="slider__dotted sm__dotted active"></div> -->
         </div>
     </div>
-<div class="buc">
-    <a href="/pages/basket/1.html"><img src="/src/photo/buc.png" alt=""></a>
+    <div >
+      <a href="/pages/basket/index.html"><img src="/src/photo/buc.png" alt=""></a>
+    </div>
   </div>
-  </div>
+
   <div class="cards"></div>
   
     <template id="card">
@@ -42,7 +42,7 @@
           <!-- Изображение-ссылка товара -->
           <a href="/pages/card/index.html" class="card__image">
             <img
-              src="/src/phones/1.jpg"
+              src=""
               alt="Apple IPhone ."
             />
           </a>
