--- a/pages/Card/index.html
+++ b/pages/Card/index.html
@@ -15,11 +15,11 @@
     <main>
      <img src="/src/phones/1.jpg" alt="">
      <p>
-        Iphone1 <br>
-        Описание телефона!
+        Iphone1 <br><br>
+        <span>Описание телефона!</span>
      </p>
      <div>Цена</div>
-     <a href="/pages/basket/1.html"><div class="basket"> В КОРЗИНУ</div></a>
+     <a href="/pages/basket/index.html"><div class="basket"> В КОРЗИНУ</div></a>
     </main>
     <footer>
      <img src="/src/photo/1.jpg" alt="">
