--- a/index.html
+++ b/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/slider.css">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+
+  <body>
+    <header>
+      <section class="begin">
+        <div class="Text">M <span>VIDEO</span></div>
+        <div>
+          <a class="b" href="index.html">ГЛАВНАЯ</a>
+          <a href="news.html">КОНТАКТЫ</a>
+          <a href="nt.html">О КОМПАНИИ</a>
+          <a href="/pages/basket/index.html">КОРЗИНА</a>
+        </div>
+      </section>
+    </header>
     <div class="d-flex">
-    <div class="slider">
+      <div class="slider">
         <div class="slider__line d-flex">
-            <img src="/src/photo/1.jpg">
-            <img src="/src/photo/2.jpg">
-            <img src="/src/photo/3.jpg">
-            <img src="/src/photo/4.jpg">
-            <img src="/src/photo/5.jpg">    
+          <img src="/src/photo/1.jpg" />
+          <img src="/src/photo/2.jpg" />
+          <img src="/src/photo/3.jpg" />
+          <img src="/src/photo/4.jpg" />
+          <img src="/src/photo/5.jpg" />
         </div>
         <div class="slider__controls d-flex">
-            <i class="fa-solid fa-circle-arrow-left" onclick="sliderLeft()"></i>
-            <i class="fa-solid fa-circle-arrow-right" onclick="sliderRight()"></i>
-            
+          <i class="fa-solid fa-circle-arrow-left" onclick="sliderLeft()"></i>
+          <i class="fa-solid fa-circle-arrow-right" onclick="sliderRight()"></i>
         </div>
-        <div class="slider__dotteds">      
-            <!-- <div class="slider__dotted sm__dotted active"></div> -->
+        <div class="slider__dotteds">
+          <!-- <div class="slider__dotted sm__dotted active"></div> -->
         </div>
+      </div>
     </div>
-    <div >
-      <a href="/pages/basket/index.html"><img src="/src/photo/buc.png" alt=""></a>
-    </div>
-  </div>
 
-  <div class="cards"></div>
-  
+    <div class="cards"></div>
+
     <template id="card">
       <div class="card">
         <!-- Верхняя часть -->
         <div class="card__top">
           <!-- Изображение-ссылка товара -->
           <a href="/pages/card/index.html" class="card__image">
-            <img
-              src=""
-              alt="Apple IPhone ."
-            />
+            <img src="" alt="Apple IPhone ." />
           </a>
           <!-- Скидка на товар -->
           <div class="card__label">-10%</div>
@@ -57,33 +65,74 @@
             <div class="card__price card__price--common">150 000</div>
           </div>
           <!-- Ссылка-название товара -->
-          <a href="/pages/card/index.html" class="card__title">
-            IPhone1 
-          </a>
+          <a href="/pages/card/index.html" class="card__title"> IPhone1 </a>
           <!-- Кнопка добавить в корзину -->
-          <button class="card__add" onclick="addProduct(this)">В корзину</button>
+          <button class="card__add" onclick="addProduct(this)">
+            В корзину
+          </button>
         </div>
-    </div>
-    </template>  
-  
+      </div>
+    </template>
+    <footer>
+      <section class="footer">
+        <div class="d-flex">
+          <div>
+            <span>О НАС</span>
+            <p>
+              Мы оказываем услуги по продаже техники и оказыванийй услуг <br />
+              компаниям и физическим лицам <br />
+              оптовым и частным лицам, которым <br />
+              нужна техника от смартфона до систем вентиляции <br />
+              по наличию,или для заказа обращайтесь в раздел контакты<br />
+            </p>
+          </div>
+          <div>
+            <span>КОНТАКТЫ</span>
+            <p>
+              <img src="/src/photo/placeholder.png" alt="" />
+              Москва Большая Спаская 12 <br />
+              <img src="/src/photo/telephone.png" alt="" />
+              8(495)495-55-65 <br />
+              <img src="/src/photo/mail.png" alt="" />
+              mvideo@mail.ru
+            </p>
+          </div>
+        </div>
+        <div>
+          <script
+            type="text/javascript"
+            charset="utf-8"
+            async
+            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3d265f163aa5ee1f9a58a15404efb9b388346388caba49acd5d07ab90b297c9d&amp;width=320&amp;height=240&amp;lang=ru_RU&amp;scroll=true"
+          ></script>
+        </div>
+      </section>
+      <div class="rig">2007 Все права защищены.</div>
+    </footer>
+
     <script defer src="/js/events.js" type="module"></script>
     <script defer src="/js/slider.js" type="module"></script>
     <script defer src="/js/swap.js" type="module"></script>
     <script type="module">
-        // импортируем в глобальную область видимости
-        import {counter,sliderLeft,sliderRight,showSlide} from './js/slider.js';
-        window.sliderLeft = sliderLeft;
-        window.sliderRight = sliderRight;
-        window.showSlide = showSlide;
+      // импортируем в глобальную область видимости
+      import {
+        counter,
+        sliderLeft,
+        sliderRight,
+        showSlide,
+      } from "./js/slider.js";
+      window.sliderLeft = sliderLeft;
+      window.sliderRight = sliderRight;
+      window.showSlide = showSlide;
     </script>
     <script src="/js/products.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-        //  function getProductId(id) {
-        //     if (!id) return null;
-        //     const response =  axios.get(`http://localhost:3000/products/` + id);
-        //     return await response.data.id;
-        // }
+      //  function getProductId(id) {
+      //     if (!id) return null;
+      //     const response =  axios.get(`http://localhost:3000/products/` + id);
+      //     return await response.data.id;
+      // }
     </script>
-</body>
+  </body>
 </html>
