--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <script defer src="/js/events.js" type="module"></script>
     <script defer src="/js/slider.js" type="module"></script>
     <script defer src="/js/swap.js" type="module"></script>
-    <script defer src="/js/products.js" type="module"></script>
+    <script defer src="/js/products.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
