render first 12 cart for index.html

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       <div class="rig">2007 Все права защищены.</div>
     </footer>
 
+    <script src="/js/config.js"></script>
     <script defer src="/js/events.js" type="module"></script>
     <script defer src="/js/slider.js" type="module"></script>
     <script defer src="/js/swap.js" type="module"></script>
