--- a/pages/basket/index.html
+++ b/pages/basket/index.html
@@ -100,6 +100,7 @@
     </article>
   </template>
 
+  <script src="/js/config.js"></script>
   <script src="/js/storage.js"></script>
   <script>
     // при загрузке страницы получаем хранилище
@@ -111,7 +112,7 @@
         for (let id in products) {
           ids += `id=${id}&`;
         }
-        fetch(`http://localhost:3001/products?${ids}`).then(function (response) {
+        fetch(`${APP_URL}/products?${ids}`).then(function (response) {
           return response.json()
         })
           .then(function (products) {
@@ -119,7 +120,7 @@
           })
       }
     }
-    
+
     // отрисовка карточек с товаров
     function renderCart(products) {
         const parent = document.querySelector('main .container');
