--- a/pages/basket/index.html
+++ b/pages/basket/index.html
@@ -72,7 +72,7 @@
   <template id="item">
     <article class="product">
       <header>
-        <a class="remove" onclick="removeCart()">
+        <a class="remove" >
           <img src="/src/phones/1.jpg" alt="" />
           <h3>удалить товар</h3>
         </a>
@@ -156,12 +156,12 @@
           // клонируем
           let clone = document.getElementById('item').content.querySelector('article').cloneNode(true);
           clone.dataset.id = product.id;
+          // добавляем атрибут 
+          clone.querySelector('.remove').setAttribute('onclick',`removeCart(${product.id})`);
           // заменяем имя товара
           clone.querySelector('.name').textContent = product.name;
           // кол шт
           clone.querySelector('.qt').textContent = getStorageProduct()[product.id];
-          // устанавливаем id товара
-          clone.querySelector('.remove').dataset.id = product.id;
           // устанааливаем цену
           clone.querySelector('.full-price').textContent = product.price;
           clone.querySelector('.price').textContent = 'Цена по скидке' + getDiscountPrice(product);
